--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             font-style: normal;  
         }
         .box{
-            width: 400px;
-            height: 400px;
+            width: 450px;
+            height: 450px;
 
             display: flex;
             flex-direction: column;
@@ -85,10 +85,10 @@
             font-size: medium;
         }
 
-        @media (max-width: 320px){
+        @media only screen and (max-width: 600px){
             .box{
-            width: 300px;
-            height: 300px;
+            width: 250px;
+            height: 250px;
             }
 
             .innerbox{
