--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
             padding: 7px;
             font-size: medium;
         }
+
+        .box{
+            margin-bottom: 140px;
+        }
+        
         }
     </style>
 </head>
