--- a/index.html
+++ b/index.html
@@ -86,9 +86,15 @@
         }
 
         @media only screen and (max-width: 600px){
+            body {
+            max-width: 100%;
+            overflow-x: hidden;
+            }
+            
             .box{
             width: 365px;
             height: 365px;
+            margin-bottom: 150px;
             }
 
             .innerbox{
@@ -127,12 +133,7 @@
             box-shadow: 3px 3px 3px rgb(47, 45, 45);
             padding: 7px;
             font-size: medium;
-        }
-
-        .box{
-            margin-bottom: 140px;
-        }
-        
+        }        
         }
     </style>
 </head>
